--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "verifone",
-  "version": "0.1.0",
+  "name": "front-end-template",
+  "version": "0.1.1",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -8,7 +8,6 @@
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-uglify": "~0.3.2",
-    "normalize-css": "~2.1.3",
     "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-compass": "~0.7.1",
     "grunt-usemin": "~2.0.2",
